--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,10 @@
 /* Customize your main colors in :root variables */
 :root {
-  --main-background-color: #343A50;
-  --card-background-color: #51576D;
+  --main-background-color: #8a9cdd;
+  --card-background-color: #5e71b5;
   --card-background-lighter-color: #7A7F92;
-  --main-text-color:#F7F6F4;
-  --title-text-color:#3CBA8B;
+  --main-text-color:#dba2dc;
+  --title-text-color:#b85bd4;
 }
 
 body{
